# agentic-ai-projects

./: .gitignore  README.md  chains.py  config.py  ingestion.py  main.py  memory.db-shm  memory.db-wal  my_agents.py  prompts.py  pyproject.toml  sales_agent.py  schemas.py  todo.py  tool_executor.py  tools.py
debate/: pyproject.toml
graph/: graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: web_search.py
static/: summary.txt
