[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.1.4",
    "langsmith[openai-agents]>=0.6.1",
    "openai>=2.14.0",
    "openai-agents>=0.6.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sendgrid>=6.12.5",
]
